# boiler-bazel-scala

./: .gitignore  BUILD.bazel  Makefile  README.md  WORKSPACE  bazel-bin  bazel-out  bazel-raayan_bazel  bazel-testlogs  common.bzl  dependencies.yaml
alpha/: BUILD.bazel
alpha/src/main/scala/alpha/: Main.scala
beta/: BUILD.bazel
beta/src/main/scala/beta/: Worker.scala
bloop/: bloop.bzl
bloop/private/: BUILD
scripts/: build_iml  update_dependencies
