load("@io_bazel_rules_scala//scala:scala.bzl", "scala_library", "scala_test")

scala_library(
    name = "alpha",
    srcs = ["src/main/scala/alpha/Main.scala"],
    visibility = ["//:__pkg__"],
    deps = [
        "//3rdparty/jvm/joda_time",
        "//beta",
    ],
)

scala_test(
    name = "test-main",
    srcs = glob(["src/test/scala/alpha/*.scala"]),
    deps = [":alpha"],
)
