load("@io_bazel_rules_scala//scala:scala.bzl", "scala_library", "scala_test")

scala_library(
    name = "beta",
    srcs = glob(["src/main/scala/beta/*.scala"]),
    visibility = [
        "//alpha:__pkg__",
    ],
    deps = [],
)

scala_test(
    name = "test-beta",
    srcs = glob(["src/test/scala/beta/*.scala"]),
    deps = [
        ":beta",
    ],
)
